--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -1,3 +1,5 @@
+Glitches/Bad ----------------------------------------
+
 setsPage 
     -> save state of page on navigator push so the search bar is closed
     -> fix glitch where exercises come back after deleting and pressing back on a certain set
@@ -5,12 +7,28 @@ exerciseButton
     2. dismissable
         -> Fix glitch where the delete cancel adds to bottom
         -> Fix glitch where double delete cancel throws error
-        -> 
+
+Add: ------------------------------------------------
+
 workoutDashboard
     -> Create text logo for top middle 
     -> Create notification page layout
 
+exercisesPage
+    -> searchBar onsumbit -> add set
+    -> add 2 recommended buttons (lower opacity) 
+        -> onclick: 
+            -> opacity goes up and exercise is added to current workout
+            -> button moves to top of normal buttons
+            -> new recommended button is generated 
+            -> new set page is openend
+        -> recommended no equipment exercises before data has been collected
+    ->  
 
+setsPage
+    -> Show (Feb 22 2023 - Dec 28 2024) instead of labeling x axis
+    -> Create 'zoom in' slider for set statistics (changes from date)
+    ->
 
 
 
