--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -27,7 +27,8 @@ exercisesPage
 setsPage
     -> Show (Feb 22 2023 - Dec 28 2024) instead of labeling x axis
     -> Create 'zoom in' slider for set statistics (changes from date)
-    ->
+    -> create 'Set History' button
+    -> show last 3 workouts with date + line divider
 
 
 
