--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -17,41 +17,22 @@ exercisesPage:
 
 Add: ------------------------------------------------
 
-setsPage
-    -> sort statistics by (1 rep, x rep max)
-    -> pr set with medal icon + previous pr with different color medal icon
-    -> infinite scroll + up button
-
 Genereal:
-    -> Sync positions of navbar elements
+    -> Change Logo
 
-dashboardNavBar
-    -> Top left noti
-    -> Create text logo for navbar infix 
-    -> Create notification page layout
+Home: 
+    -> Workout Calendar
+    -> Stats (Top Right)
 
-Start Workout -> (Progress Bar for each Path)
-    -> Strength (Red Background)
-        -> Push-Pull-Legs
-        -> Full Body
-        -> Upper-Lower
-        -> Bro Split
-        -> Calisthenics
-    -> Endurance (Blue Background)
-        -> HIIT
-        -> Cardio
-    -> Flexibility (Green Background)
-        -> Yoga
-        -> Stretches
+Detected Split:
+	-> AI Generated
+	-> Upper Lower
+	-> Push Pull Legs
+	-> Full Body
+	-> Bro Split
+	-> Calisthenics
+    
 
-Profile ->
-    -> Strength Stats,
-    -> Endurance Stats,
-    -> Flexibility Stats,
-
-Detected Trainingplan:
-    -> Red Circle + Text
-        (e.g)'2 Improvements can be made'
 
 Entry Page: 
 Kg/Lbs 
